@startuml
!define ENTITY entity
!define RELATION association

ENTITY Cliente {
    - ID del cliente
    - Razón social
    - CUIT
    - Contacto principal
    - Teléfono
    - Email
}

ENTITY Operador {
    - ID del operador<<Id>>
    - Nombre
    - Apellido
    - Teléfono
    - Email
    - Usuario
    - Contraseña
}

ENTITY Técnico {
    - ID del técnico
    - Nombre
    - Apellido
    - Especialidades (relación a tabla de Especialidades)
    - Medio de notificación preferido (Email, WhatsApp)
    - Tiempo estimado de resolución por defecto
}

ENTITY Incidente {
    - ID del incidente
    - Fecha de reporte
    - Fecha posible de resolución
    - Estado del incidente (Abierto, Resuelto)
    - Colchón de horas estimadas
    - Técnico asignado (relación a tabla de Técnicos)
    - Cliente (relación a tabla de Clientes)
}

ENTITY "Detalle de Incidente" {
    - ID del detalle de incidente
    - Descripción detallada del problema
    - Tipo del problema (relación a tabla de Tipos de Problema)
    - Incidente relacionado (relación a tabla de Incidentes)
}

ENTITY Servicio {
    - ID del servicio
    - Nombre del servicio
    - Descripción del servicio
    - Especialidad
}

ENTITY Especialidad {
    - ID de la especialidad
    - Nombre de la especialidad
}

ENTITY "Tipo de Problema" {
    - ID del tipo de problema
    - Nombre del tipo de problema
    - Tiempo máximo de resolución
}

ENTITY Notificación {
    - ID de la notificación
    - Contenido de la notificación
    - Técnico destinatario (relación a tabla de Técnicos)
    - Fecha de envío
}

Cliente --|> Servicio : contrata
Cliente --|> Incidente : reporta
Técnico --|> Especialidad : tiene
Técnico --|> Notificación : tiene
Cliente --|> Notificación : tiene
Incidente --|> Técnico : es asignado a
Incidente --|> "Detalle de Incidente" : tiene
"Detalle de Incidente" --|> "Tipo de Problema" : tiene
Operador --|> Incidente : registra
@enduml

https://plantuml.com/es/
